# mosaic-subnet

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dependabot.yml  publish.yml  release.yml  test.yml
docs/: quickstart.md
mosaic_subnet/: cli.py
mosaic_subnet/base/: __init__.py  config.py  model.py  utils.py
mosaic_subnet/gateway/: __init__.py  _config.py
mosaic_subnet/miner/: __init__.py  _config.py  model.py
mosaic_subnet/validator/: __init__.py  _config.py  dataset.py  math.py  model.py  utils.py
tests/: utils.py
