[tool.poetry]
name = "mosaic-subnet"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "mosaic_subnet"}]
[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
typer = "^0.9.0"
rich = "^13.7.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
communex = "^0.1.16"
transformers = "^4.40.1"
torch = [
    { url="https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl", python=">=3.10,<3.11", markers="sys_platform == 'linux'"},
    { url="https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp311-cp311-linux_x86_64.whl", python=">=3.11,<3.12", markers="sys_platform == 'linux'"},
]
accelerate = "^0.29.3"
httpx = "^0.27.0"
datasets = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
